name:                jack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/m-lopez/jack
license:             MIT
license-file:        LICENSE
author:              Michael Lopez
maintainer:          michael.lopez.332@gmail.com
copyright:           2017 Michael Lopez
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       BuiltIns
                       Contexts
                       Evaluator
                       Expressions
                       Parser
                       Typing
                       Util.DebugOr
                       Repl.Repl
  exposed-modules:     Repl
  build-depends:       parsec
                       , monad-loops
                       , base >= 4.7 && < 5
  default-language:    Haskell2010

executable jack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -fwarn-missing-signatures -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jack
  default-language:    Haskell2010

test-suite jack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/m-lopez/jack
